# pytia-reorder-tree

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  _build.py  _release.py  pyproject.toml  requirements.txt
assets/: python_installer.ps1  uninstall_all_global_modules.bat
docs/: DEFAULT_FILES.md  INSTALLATION.md  SAMPLE_FILES.md  WORKSPACE_FILE.md
docs/pytia_reorder_tree/: const.html  dependencies.html  exceptions.html  gui.html  index.html  main.html  type_collections.html
docs/pytia_reorder_tree/app/: exit.html  frames.html  groups.html  index.html  layout.html  log.html  permissions.html  sort.html  traces.html  utils.html  vars.html
docs/pytia_reorder_tree/handler/: index.html  utils.html
docs/pytia_reorder_tree/protocols/: index.html  window_protocol.html
docs/pytia_reorder_tree/resources/: index.html  (+1 more)
pytia_reorder_tree/: __init__.py  __main__.py  const.py  dependencies.py  exceptions.py  gui.py  main.py  type_collections.py
pytia_reorder_tree/app/: __init__.py  exit.py  frames.py  groups.py  layout.py  log.py  permissions.py  renumbering.py  sort.py  traces.py  utils.py  vars.py
pytia_reorder_tree/handler/: utils.py
pytia_reorder_tree/protocols/: __init__.py
pytia_reorder_tree/resources/: __init__.py  dependencies.json  keywords.json  properties.default.json  settings.sample.json  users.sample.json  utils.py
pytia_reorder_tree/task/: __init__.py  groups.py  permissions.py  renumbering.py  sort.py
tests/: __init__.py  test_dependencies.py  test_pytia_reorder_tree.py  test_resources.py
vbs/: build.template.catvbs
(+19 files in other folders)
